openshift-gitops/clusters/core/apps/quay/base/registry/np-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-https-from-keycloak
  namespace: quay
spec:
  podSelector:
    matchLabels:
      app: quay
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: keycloak
      - podSelector:
          matchLabels:
            app: keycloak
      ports:
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-https-from-quay
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: quay
      - podSelector:
          matchLabels:
            app: quay
      ports:
        - protocol: TCP
          port: 443
